crates/rv/tests/integration_tests/shell/snapshots/integration_tests__shell__env_test__shell_env_with_existing_manpath.snap
---
source: crates/rv/tests/integration_tests/shell/env_test.rs
expression: output.normalized_stdout()
---
unset RUBYOPT
export RUBY_ROOT=/tmp/home/.local/share/rv/rubies/ruby-3.3.5
export RUBY_ENGINE=ruby
export RUBY_VERSION=3.3.5
export GEM_HOME=/tmp/home/.local/share/rv/rubies/ruby-3.3.5/lib/ruby/gems/3.3.0
export GEM_PATH='/tmp/home/.gem/ruby/3.3.0:/tmp/home/.local/share/rv/rubies/ruby-3.3.5/lib/ruby/gems/3.3.0'
export MANPATH='/tmp/home/.local/share/rv/rubies/ruby-3.3.5/share/man:/usr/share/man:/usr/local/share/man'
export PATH='/tmp/home/.gem/ruby/3.3.0/bin:/tmp/home/.local/share/rv/rubies/ruby-3.3.5/lib/ruby/gems/3.3.0/bin:/tmp/home/.local/share/rv/rubies/ruby-3.3.5/bin:/tmp/bin'
hash -r
